# types

./: CMakeLists.txt  License.txt  README.md
examples/factories/: AggregateFactory.h  CMakeLists.txt  README.md  ThingBuffer.h  ThingFactory.h  TrivialObjects.h  main.cpp
examples/type_association/: CMakeLists.txt  README.md  associations.h  main.cpp
include/fr/types/: AggregateType.h  Concepts.h  Typelist.h
test/: AggregateType.cpp  CMakeLists.txt  Concepts.cpp  TypelistTest.cpp
